# Civil-CFD

./: .gitignore  CMakeLists.txt  README.md
examples/Bump/: bump.stl  casefile  solver.xml  vtk_log.txt
examples/Bump/vtk/: fv_0.vti
examples/Pipe_junction/: casefile  pipe_junction.stl  solver.xml  tracking
examples/Pipe_junction/vtk/: fv_0.vti
examples/Pump_station/: Pump_station.stl  casefile  solver.xml
examples/Pump_station/vtk/: fv_0.vti
gui/: About.cpp  About.h  Baffle.cpp  Baffle.h  Boundary.cpp  Boundary.h  BoundaryDisplay.cpp  BoundaryDisplay.h  CMakeLists.txt  GeometryDisplay.cpp  GeometryDisplay.h  Inspect.cpp  Inspect.h  InspectDialog.cpp  InspectDialog.h  MainWindow.cpp  MainWindow.h  MainWindow_Baffles.cpp  MainWindow_Boundaries.cpp  Makefile  Makefile.Debug  Makefile.Release  MeshDisplay.cpp  MeshDisplay.h  Render.cpp  Render.h  RenderDisplay.cpp  RenderDisplay.h  ResultList.cpp  Simulation.cpp  Simulation.h  Solver.cpp  SolverDialog.h  Visualize.cpp  Visualize3D.cpp  Visualize3DDisplay.cpp  Visualize3DDisplay.h  VisualizeDisplay.cpp  VisualizeDisplay.h  about.ui  (+34 more)
skp/: Diag_duct.skb  Diag_duct.skp  Diag_duct_flow3d.skp  Diag_duct_flow3d.stl  Diag_ductuntitled.stl  Flume.stl  Grit.skp  Grit.stl  Grit_clean.skp  Grit_complete.stl  Grit_extend.skp  Grit_extend.stl  Grit_extend~.skp  Grit_header.skp  Grit_header.stl  Grit_header2.skp  Grit_header2.stl  Grit_header2~.skp  Grit_header3.skp  Grit_header3.stl  Grit_header3~.skp  Grit_header~.skp  Grit~.skp  Simple.stl  Square.stl  bump-reverse.stl  bump-unsmooth.stl  bump.skp  plate-1.stl  plate.skb  plate.skp  plate.stl
src/app/: CMakeLists.txt  Makefile  Makefile.asan  Makefile.mac  inspect_cell.c  mesh3d.c  meshfile  nohup.out  plate_meshfile  solver3d  solver3d.c  state.pvsm  vofsolver.c  weir.stl  wmeshfile
src/mesh3d/: CMakeLists.txt  Makefile  Makefile.asan  Makefile.mac  csv.c  csv.h  csv_compressed.c  intersections.c  intersections.h  markcells.c  markcells.h  mesh.c  mesh.h  mesh_data.h  mesh_mpi.c  mesh_mpi.h  meshfile  qh_interface.c  qh_interface.h  readfile.c  readfile.h  stack.c  stack.h  stl.c  stl.h  tmeshfile  trench.out  vector_macros.h  volfract.c  volfract.h  vtk.c  vtk.h  vtk_compressed.c  vtk_xml.c  vtk_xml.h
src/solver3d/: CMakeLists.txt  Makefile  Makefile.asan  Makefile.mac  kE.c  kE.h  laminar.c  laminar.h  readsolver.c  readsolver.h  solver.c  solver.h  solver_data.h  solver_mpi.c  solver_mpi.h  track.c  track.h  vof.c  vof.h  vof_baffles.c  vof_baffles.h  vof_boundary.c  vof_boundary.h  vof_convect.c  vof_macros.h  vof_mpi.c  vof_mpi.h  vof_nvof.c  vof_pressure.c  vof_pressure_gmres.c  vof_pressure_petsc.c  vof_test_Q_upwind.c.001  vof_velocity.c  vof_vorticity.c  writesolver.c  writesolver.h
src/solver3d/back/: vof.c
src/solver3d/test/: a.out  test.c
